# quantia

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mensura.py  mkdocs.yml  pyproject.toml  test.ipynb
docs/: changelog.md  index.md  quickstart.md
docs/api/: correlatedsource.md  math.md  petroleum.md  probunitarray.md  probunitfloat.md  unitarray.md  unitfloat.md
docs/concepts/: correlation.md  monte_carlo.md  petroleum.md  pressure.md  units.md
docs/examples/: compressor.md  correlation.md  gor.md  ooip.md  petroleum_rs.md
docs/getting_started/: installation.md  tutorial.md  types.md
docs/reference/: units_all.md  units_imperial.md  units_petroleum.md  units_si.md
mensura/: __init__.py  _array.py  _compound.py  _config.py  _exceptions.py  _io.py  _registry.py  _scalar.py  math.py
mensura/prob/: __init__.py  _array.py  _copula.py  _scalar.py
mensura/profiling/: benchmark.py
mensura/units/: __init__.py  common.py  data.py  imperial.py  petroleum.py  si.py
quantia/: __init__.py  _array.py  _compound.py  _config.py  _dispatch.py  _exceptions.py  _io.py  _registry.py  _scalar.py  math.py  petroleum_conversions.py
quantia/prob/: __init__.py  _array.py  _config.py  _copula.py  _distributions.py  _scalar.py
quantia/profiling/: benchmark.py
quantia/units/: __init__.py  common.py  data.py  density.py  electromagnetic.py  imperial.py  mechanical.py  petroleum.py  si.py  thermal.py
scripts/: gen_unit_tables.py
tests/: test_algebra.py  test_config.py  test_core.py  test_dispatch.py  test_petroleum_conversions.py  test_petroleum_semantic.py  test_petroleum_units.py  test_phase1_step1_1.py  test_phase1_step1_3.py  test_phase2_integration.py  test_phase2_step2_1.py  test_serialization.py  test_units_common.py  test_units_density.py  test_units_electromagnetic.py  test_units_imperial.py  test_units_mechanical.py  test_units_si.py  test_units_thermal.py
